Preprocess leg-replica data

--- a/notebooks/models/interaction_forces/data_exploration.ipynb
+++ b/notebooks/models/interaction_forces/data_exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "powerful-spanking",
+   "id": "indirect-progress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coastal-orbit",
+   "id": "dependent-belle",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "raising-bearing",
+   "id": "subjective-domain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frozen-piece",
+   "id": "stunning-dispute",
    "metadata": {},
    "source": [
     "## Visualization"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "passive-archive",
+   "id": "beneficial-spice",
    "metadata": {},
    "outputs": [
     {
@@ -317,23 +317,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "minor-fault",
+   "execution_count": 13,
+   "id": "biological-renaissance",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select only the relevant excel sheets \n",
-    "sheets = ['ForceCells', 'H3processed', 'Leg-Replica']\n",
+    "sheets = ['Parameters', 'RawForces', 'ForceCells', 'H3raw', 'H3processed', 'Leg-Replica']\n",
     "\n",
-    "forces_df = data_dict[sheets[0]]\n",
-    "exo_df = data_dict[sheets[1]]\n",
-    "leg_df = data_dict[sheets[2]]"
+    "forces_df = data_dict[sheets[2]]\n",
+    "exo_df = data_dict[sheets[4]]\n",
+    "leg_df = data_dict[sheets[5]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "determined-contract",
+   "execution_count": 14,
+   "id": "exposed-warner",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,8 +682,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "afraid-wireless",
+   "execution_count": 15,
+   "id": "annual-sarah",
    "metadata": {},
    "outputs": [
     {
@@ -720,8 +720,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "naked-break",
+   "execution_count": 16,
+   "id": "sealed-remains",
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "max       21.180639     11.077435      2.999993  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,8 +1024,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "adjustable-developer",
+   "execution_count": 17,
+   "id": "touched-metropolitan",
    "metadata": {},
    "outputs": [
     {
@@ -1067,8 +1067,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "hourly-layout",
+   "execution_count": 18,
+   "id": "decreased-municipality",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
        "max                  53.493967               170.720535             -11.112289  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,8 +1231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "rolled-original",
+   "execution_count": 19,
+   "id": "european-greeting",
    "metadata": {},
    "outputs": [
     {
@@ -1289,8 +1289,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "australian-zoning",
+   "execution_count": 20,
+   "id": "interim-float",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,14 +1301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "mediterranean-concept",
+   "execution_count": 21,
+   "id": "generous-holmes",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4a23ae2b2d244649907df4d19fc6dc2",
+       "model_id": "ebec6d73b42b4dc882b4d70b713c53d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1335,14 +1335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "metallic-retirement",
+   "execution_count": 22,
+   "id": "mighty-museum",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "950074020a7142309ecbaa8c0673a7a3",
+       "model_id": "9a3a7061a405455184eed39e458e3021",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1369,14 +1369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "weighted-malpractice",
+   "execution_count": 23,
+   "id": "protecting-submission",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a8addb17dd64576bf93c380b79221d9",
+       "model_id": "2444e5ea06ae4f278c6189395a16a653",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "private-affairs",
+   "id": "helpful-causing",
    "metadata": {},
    "outputs": [],
    "source": []
