Add kinematic knee data to the interaction forces model

--- a/notebooks/models/interaction_forces/data_preprocessing.ipynb
+++ b/notebooks/models/interaction_forces/data_preprocessing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "brilliant-conflict",
+   "id": "french-classics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import dask\n",
     "from dask import dataframe as dd\n",
     "from dask.diagnostics import ProgressBar\n",
+    "import math\n",
     "import json\n",
     "import os\n",
     "import gc"
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quick-gentleman",
+   "id": "raising-bermuda",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -31,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "solid-divorce",
+   "id": "fiscal-maryland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
     "DERIVED_DATA_DIR = '/derived_data'\n",
     "\n",
     "# ID fo the training and test data resulting from this notebook, stored in DERIVED_DATA_DIR\n",
-    "RESULTS_ID = '0001_26032021'\n",
+    "RESULTS_ID = '0002_31032021'\n",
     "\n",
     "# % of the data for the test set\n",
     "TEST_SIZE = 0.3\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "first-correction",
+   "id": "golden-sheet",
    "metadata": {},
    "source": [
     "## Preprocessing"
@@ -69,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "crude-hampton",
+   "id": "straight-prague",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "forward-mainstream",
+   "id": "direct-monitoring",
    "metadata": {},
    "outputs": [
     {
@@ -170,49 +171,49 @@
      "output_type": "stream",
      "text": [
       "Processing file 1:\n",
-      "[########################################] | 100% Completed |  1min  2.9s\n",
+      "[########################################] | 100% Completed |  1min  6.0s\n",
       "\n",
       "Processing file 2:\n",
-      "[########################################] | 100% Completed |  1min  1.3s\n",
+      "[########################################] | 100% Completed |  1min  4.3s\n",
       "\n",
       "Processing file 3:\n",
-      "[########################################] | 100% Completed |  1min  1.6s\n",
+      "[########################################] | 100% Completed |  1min  3.8s\n",
       "\n",
       "Processing file 4:\n",
-      "[########################################] | 100% Completed |  1min  1.1s\n",
+      "[########################################] | 100% Completed |  1min  6.3s\n",
       "\n",
       "Processing file 5:\n",
-      "[########################################] | 100% Completed |  1min  0.4s\n",
+      "[########################################] | 100% Completed |  1min  4.4s\n",
       "\n",
       "Processing file 6:\n",
-      "[########################################] | 100% Completed |  1min  1.8s\n",
+      "[########################################] | 100% Completed |  1min 11.3s\n",
       "\n",
       "Processing file 7:\n",
-      "[########################################] | 100% Completed |  1min  0.6s\n",
+      "[########################################] | 100% Completed |  1min  3.9s\n",
       "\n",
       "Processing file 8:\n",
-      "[########################################] | 100% Completed |  1min  1.7s\n",
+      "[########################################] | 100% Completed |  1min 10.8s\n",
       "\n",
       "Processing file 9:\n",
-      "[########################################] | 100% Completed |  1min  1.8s\n",
+      "[########################################] | 100% Completed |  1min  6.1s\n",
       "\n",
       "Processing file 10:\n",
-      "[########################################] | 100% Completed |  1min  1.4s\n",
+      "[########################################] | 100% Completed |  1min  2.6s\n",
       "\n",
       "Processing file 11:\n",
-      "[########################################] | 100% Completed |  1min  0.7s\n",
+      "[########################################] | 100% Completed |  1min  2.7s\n",
       "\n",
       "Processing file 12:\n",
-      "[########################################] | 100% Completed |  1min  1.8s\n",
+      "[########################################] | 100% Completed |  1min  9.5s\n",
       "\n",
       "Processing file 13:\n",
-      "[########################################] | 100% Completed |  1min  0.1s\n",
+      "[########################################] | 100% Completed |  1min  5.0s\n",
       "\n",
       "Processing file 14:\n",
-      "[########################################] | 100% Completed |  1min  1.5s\n",
+      "[########################################] | 100% Completed |  1min  3.7s\n",
       "\n",
       "Processing file 15:\n",
-      "[########################################] | 100% Completed |  1min  1.4s\n",
+      "[########################################] | 100% Completed |  1min  3.1s\n",
       "\n"
      ]
     }
@@ -241,8 +242,11 @@
     "        \n",
     "        \n",
     "    leg_df_raw = data_df[sheets[5]].iloc[:, :3]\n",
+    "    # Correct the time shift between the data from the leg and the data from the exo\n",
     "    leg_df_processed = shift_leg_data(data_df[sheets[5]].iloc[:, 3:], data_df[sheets[0]]['TimeShift'], len(data_df[sheets[4]]))\n",
     "    \n",
+    "    assert(len(leg_df_processed) == len(data_df[sheets[4]]) == len(data_df[sheets[2]]))    \n",
+    "\n",
     "    json.dump(data_df[sheets[0]], open(save_dir + '/parameters.json', 'w'))\n",
     "    data_df[sheets[1]].to_csv(save_dir + '/force_cells_raw.csv', index=False)\n",
     "    data_df[sheets[2]].to_csv(save_dir + '/force_cells_processed.csv', index=False)\n",
@@ -256,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "derived-stupid",
+   "id": "mechanical-analyst",
    "metadata": {},
    "source": [
     "## Features and target selection"
@@ -264,15 +268,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "daily-cattle",
+   "execution_count": 6,
+   "id": "parliamentary-party",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:01<00:00, 10.41it/s]\n"
+      "100%|██████████| 15/15 [00:01<00:00,  8.17it/s]\n"
      ]
     }
    ],
@@ -282,7 +286,7 @@
     "for i in tqdm(range(N_EXPERIMENTS)):\n",
     "    data_dir = os.path.join(SOURCE_PATH + DERIVED_DATA_DIR, DATE_EXPERIMENTS, str(i + 1))\n",
     "    \n",
-    "    targets_df = pd.read_csv(data_dir + '/force_cells.csv')\n",
+    "    targets_df = pd.read_csv(data_dir + '/force_cells_processed.csv')\n",
     "    targets_df_ls.append(targets_df)\n",
     "    \n",
     "    exo_df = pd.read_csv(data_dir + '/H3_processed.csv')\n",
@@ -297,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "solved-watts",
+   "id": "after-thousand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,15 +312,15 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "blocked-wagner",
+   "id": "diagnostic-presentation",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of features: 12\n",
-      "Selected features: ['LHipPos', 'LHipVel', 'LHipAcc', 'LHipTorque', 'LKneePos', 'LKneeVel', 'LKneeAcc', 'LKneeTorque', 'LAnklePos', 'LAnkleVel', 'LAnkleAcc', 'LAnkleTorque']\n",
+      "Number of features: 15\n",
+      "Selected features: ['LHipPos', 'LHipVel', 'LHipAcc', 'LHipTorque', 'LKneePos', 'LKneeVel', 'LKneeAcc', 'LKneeTorque', 'LAnklePos', 'LAnkleVel', 'LAnkleAcc', 'LAnkleTorque', 'LegKneePositionFiltered', 'LegKneeVelocityFiltered', 'LegKneeTorqueFiltered']\n",
       "\n",
       "\n",
       "Number of targets: 24\n",
@@ -327,7 +331,7 @@
    "source": [
     "H3_LEG = 'L' # L|R\n",
     "\n",
-    "features = [H3_LEG + a + m for a in ['Hip', 'Knee', 'Ankle'] for m in ['Pos', 'Vel', 'Acc', 'Torque']]\n",
+    "features = [H3_LEG + a + m for a in ['Hip', 'Knee', 'Ankle'] for m in ['Pos', 'Vel', 'Acc', 'Torque']] + ['LegKnee{}Filtered'.format(m) for m in ['Position', 'Velocity', 'Torque']]\n",
     "targets = ['F' + str(i + 1) + ax for i in range(N_CELLS) for ax in ['x', 'y', 'z']]\n",
     "\n",
     "print('Number of features: {}'.format(len(features)))\n",
@@ -340,14 +344,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "industrial-myrtle",
+   "id": "capable-brain",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X: (268576, 12), Y: (268576, 24)\n"
+      "X: (268576, 15), Y: (268576, 24)\n"
      ]
     }
    ],
@@ -360,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boring-greece",
+   "id": "hollow-parish",
    "metadata": {},
    "source": [
     "## Nulls handeling, split and normalization"
@@ -368,8 +372,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ongoing-issue",
+   "execution_count": 11,
+   "id": "thermal-silver",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +381,7 @@
      "output_type": "stream",
      "text": [
       "Droping 30 data points by null features\n",
-      "X: (268546, 12), Y: (268546, 24)\n"
+      "X: (268546, 15), Y: (268546, 24)\n"
      ]
     }
    ],
@@ -393,16 +397,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "accredited-graphic",
+   "execution_count": 12,
+   "id": "cross-mounting",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train -> X: (187982, 12), Y: (187982, 24)\n",
-      "Test -> X: (80564, 12), Y: (80564, 24)\n"
+      "Train -> X: (187982, 15), Y: (187982, 24)\n",
+      "Test -> X: (80564, 15), Y: (80564, 24)\n"
      ]
     }
    ],
@@ -415,8 +419,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "typical-flour",
+   "execution_count": 13,
+   "id": "million-wheat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "straight-essay",
+   "id": "agricultural-worry",
    "metadata": {},
    "source": [
     "## Save data"
@@ -436,8 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "northern-handling",
+   "execution_count": 14,
+   "id": "vulnerable-taiwan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "married-grain",
+   "id": "amino-joshua",
    "metadata": {},
    "outputs": [],
    "source": []
