New feature selection notebook

--- a/notebooks/models/interaction_forces/interaction_forces_prediction_model.ipynb
+++ b/notebooks/models/interaction_forces/interaction_forces_prediction_model.ipynb
@@ -44,6 +44,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configuration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -74,6 +81,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -95,6 +109,13 @@
     "\n",
     "print('X train: {}, Y train: {}'.format(X_train.shape, Y_train.shape))\n",
     "print('X test: {}, Y test: {}'.format(X_test.shape, Y_test.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train model"
    ]
   },
   {
@@ -391,13 +412,13 @@
    "source": [
     "rf = RandomForestRegressor(random_state=0, verbose=10)\n",
     "\n",
-    "clf = GridSearchCV(rf, param_grid, cv=5, scoring='neg_mean_squared_error', n_jobs=-1, pre_dispatch=2, verbose=10)\n",
-    "clf.fit(X_train, Y_train)\n",
+    "model = GridSearchCV(rf, param_grid, cv=5, scoring='neg_mean_squared_error', n_jobs=-1, pre_dispatch=2, verbose=10)\n",
+    "model.fit(X_train, Y_train)\n",
     "\n",
-    "print('Best params: {}'.format(clf.best_params_))\n",
+    "print('Best params: {}'.format(model.best_params_))\n",
     "\n",
     "# Save the model\n",
-    "dump(clf, os.path.join(SOURCE_PATH + DERIVED_DATA_DIR, DATE_EXPERIMENT, 'model_' + DATA_ID + '.joblib')) "
+    "dump(model.best_estimator_, os.path.join(SOURCE_PATH + DERIVED_DATA_DIR, DATE_EXPERIMENT, 'model_' + DATA_ID + '.joblib')) "
    ]
   },
   {
@@ -611,8 +632,8 @@
     }
    ],
    "source": [
-    "train_preds = clf.best_estimator_.predict(X_train)\n",
-    "test_preds = clf.best_estimator_.predict(X_test)\n",
+    "train_preds = model.best_estimator_.predict(X_train)\n",
+    "test_preds = model.best_estimator_.predict(X_test)\n",
     "\n",
     "results = {\n",
     "    'Train': {\n",
@@ -642,56 +663,6 @@
     "        for loss in ['MAE', 'MSE', 'R2']:\n",
     "            scores = [results[subset][loss][i + f] for i in range(0, N_CELLS * 3, 3)]\n",
     "            print(' '.join([subset, force, loss]) + ': {:.4f} ± {:.4f}'.format(np.mean(scores), np.std(scores)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 1000
-    },
-    "id": "nHfVPDVvXkbN",
-    "outputId": "f8554b78-bad2-48ea-f8f8-5eead89f387d"
-   },
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "\n",
-    "param_grid = {}\n",
-    "#     'n_estimators': [10, 20, 50, 100, 500],\n",
-    "#     'criterion': ['mse', 'mae'],\n",
-    "#     'max_depth': [1, 2, 5, 10],\n",
-    "\n",
-    "# }\n",
-    "\n",
-    "for t in range(Y_train.shape[1]):\n",
-    "    target = targets_names[t]\n",
-    "    rf = RandomForestRegressor(random_state=0)\n",
-    "\n",
-    "    clf = GridSearchCV(rf, param_grid, cv=5, scoring='neg_mean_squared_error', n_jobs=8)\n",
-    "    clf.fit(X_train, Y_train[:, t])\n",
-    "\n",
-    "    #print('Best params: {}'.format(clf.best_params_))\n",
-    "\n",
-    "\n",
-    "    test_preds = clf.best_estimator_.predict(X_test)\n",
-    "\n",
-    "    # print('{} train MAE: {}'.format(target, mean_absolute_error(Y_train[:, t], clf.best_estimator_.predict(X_train_norm))))\n",
-    "    # print('{} train MSE: {}'.format(target, mean_squared_error(Y_train[:, t], clf.best_estimator_.predict(X_train_norm))))\n",
-    "    # print('{} train R2: {}'.format(target, r2_score(Y_train[:, t], clf.best_estimator_.predict(X_train_norm))))\n",
-    "\n",
-    "    print('{} test MAE: {}'.format(target, mean_absolute_error(Y_test[:, t], test_preds)))\n",
-    "    print('{} test MSE: {}'.format(target, mean_squared_error(Y_test[:, t], test_preds)))\n",
-    "    print('{} test R2: {}'.format(target, r2_score(Y_test[:, t], test_preds)))\n",
-    "    \n",
-    "    print()\n",
-    "    print('///////////////////////////////////////////////////')\n",
-    "    print()\n",
-    "    gc.collect()\n",
-    "    \n",
-    "'''"
    ]
   },
   {
