New train-test data split

--- a/notebooks/models/interaction_forces/data_preprocessing.ipynb
+++ b/notebooks/models/interaction_forces/data_preprocessing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "french-classics",
+   "id": "norman-watershed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import dask\n",
     "from dask import dataframe as dd\n",
     "from dask.diagnostics import ProgressBar\n",
+    "import random\n",
     "import math\n",
     "import json\n",
     "import os\n",
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raising-bermuda",
+   "id": "higher-liechtenstein",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -32,11 +33,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fiscal-maryland",
+   "id": "latin-bundle",
    "metadata": {},
    "outputs": [],
    "source": [
     "dask.config.set(num_workers=8, scheduler='processes')\n",
+    "random.seed(0)\n",
     "\n",
     "# Path where the data is stored\n",
     "SOURCE_PATH = '../../../data'\n",
@@ -45,23 +47,24 @@
     "# Directory inside SOURCE_PATH where the derived data is stored\n",
     "DERIVED_DATA_DIR = '/derived_data'\n",
     "\n",
-    "# ID fo the training and test data resulting from this notebook, stored in DERIVED_DATA_DIR\n",
-    "RESULTS_ID = '0002_31032021'\n",
-    "\n",
-    "# % of the data for the test set\n",
-    "TEST_SIZE = 0.3\n",
-    "\n",
     "# Number of force cells in the robotic leg\n",
     "N_CELLS = 8\n",
     "\n",
     "# Experiment params\n",
     "DATE_EXPERIMENTS = '24022021'\n",
-    "N_EXPERIMENTS = 15\n"
+    "N_EXPERIMENTS = 15\n",
+    "\n",
+    "\n",
+    "# ID fo the training and test data resulting from this notebook, stored in DERIVED_DATA_DIR\n",
+    "RESULTS_ID = '0003_08042021'\n",
+    "\n",
+    "# % of the data for the test set\n",
+    "TEST_SIZE = 0.3"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "golden-sheet",
+   "id": "classified-millennium",
    "metadata": {},
    "source": [
     "## Preprocessing"
@@ -70,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "straight-prague",
+   "id": "continuing-boundary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "direct-monitoring",
+   "id": "usual-honolulu",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mechanical-analyst",
+   "id": "recreational-shakespeare",
    "metadata": {},
    "source": [
     "## Features and target selection"
@@ -268,51 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "parliamentary-party",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [00:01<00:00,  8.17it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "targets_df_ls = []\n",
-    "features_df_ls = []\n",
-    "for i in tqdm(range(N_EXPERIMENTS)):\n",
-    "    data_dir = os.path.join(SOURCE_PATH + DERIVED_DATA_DIR, DATE_EXPERIMENTS, str(i + 1))\n",
-    "    \n",
-    "    targets_df = pd.read_csv(data_dir + '/force_cells_processed.csv')\n",
-    "    targets_df_ls.append(targets_df)\n",
-    "    \n",
-    "    exo_df = pd.read_csv(data_dir + '/H3_processed.csv')\n",
-    "    leg_df = pd.read_csv(data_dir + '/leg_processed.csv')\n",
-    "    features_df = pd.concat([exo_df, leg_df], axis=1)\n",
-    "    features_df_ls.append(features_df)\n",
-    "\n",
-    "targets_df = pd.concat(targets_df_ls, axis=0)\n",
-    "features_df = pd.concat(features_df_ls, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "after-thousand",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Rename columns to manage with some typos\n",
-    "features_df = features_df.rename(columns={'LankleTorque': 'LAnkleTorque', 'RankleTorque': 'RAnkleTorque'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "diagnostic-presentation",
+   "execution_count": 3,
+   "id": "foster-louis",
    "metadata": {},
    "outputs": [
     {
@@ -343,75 +303,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "capable-brain",
+   "execution_count": 4,
+   "id": "yellow-symposium",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X: (268576, 15), Y: (268576, 24)\n"
+      "Droping 2 data points by null features\n",
+      "Experiment 1 -> X: (17952, 15), Y: (17952, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 2 -> X: (17980, 15), Y: (17980, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 3 -> X: (17678, 15), Y: (17678, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 4 -> X: (17957, 15), Y: (17957, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 5 -> X: (17747, 15), Y: (17747, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 6 -> X: (18025, 15), Y: (18025, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 7 -> X: (17768, 15), Y: (17768, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 8 -> X: (18042, 15), Y: (18042, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 9 -> X: (18036, 15), Y: (18036, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 10 -> X: (17903, 15), Y: (17903, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 11 -> X: (17803, 15), Y: (17803, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 12 -> X: (18077, 15), Y: (18077, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 13 -> X: (17674, 15), Y: (17674, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 14 -> X: (17985, 15), Y: (17985, 24) \n",
+      "\n",
+      "Droping 2 data points by null features\n",
+      "Experiment 15 -> X: (17919, 15), Y: (17919, 24) \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "X = features_df[features]\n",
-    "Y = targets_df[targets]\n",
+    "targets_dict = {}\n",
+    "features_dict = {}\n",
+    "for i in range(1, N_EXPERIMENTS + 1):\n",
+    "    # Define the path to load the data\n",
+    "    data_dir = os.path.join(SOURCE_PATH + DERIVED_DATA_DIR, DATE_EXPERIMENTS, str(i))\n",
+    "    \n",
+    "    # Load targets\n",
+    "    targets_df = pd.read_csv(data_dir + '/force_cells_processed.csv')\n",
+    "    \n",
+    "    # Load features\n",
+    "    exo_df = pd.read_csv(data_dir + '/H3_processed.csv')\n",
+    "    leg_df = pd.read_csv(data_dir + '/leg_processed.csv')\n",
+    "    features_df = pd.concat([exo_df, leg_df], axis=1)\n",
+    "    \n",
+    "    # Rename columns to manage with some typos\n",
+    "    features_df = features_df.rename(columns={'LankleTorque': 'LAnkleTorque', 'RankleTorque': 'RAnkleTorque'})\n",
     "\n",
-    "print('X: {}, Y: {}'.format(X.shape, Y.shape))"
+    "    # Drop null values\n",
+    "    idx = features_df.notna().all(axis=1)\n",
+    "    features_df = features_df.loc[idx]\n",
+    "    targets_df = targets_df.loc[idx]\n",
+    "    print('Droping {} data points by null features'.format(len(idx[idx == False])))\n",
+    "\n",
+    "    # Store the final array\n",
+    "    targets_dict[i] = targets_df[targets].values\n",
+    "    features_dict[i] = features_df[features].values\n",
+    "    \n",
+    "    print('Experiment {} -> X: {}, Y: {} \\n'.format(i, features_dict[i].shape, targets_dict[i].shape))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "hollow-parish",
+   "id": "together-prefix",
    "metadata": {},
    "source": [
-    "## Nulls handeling, split and normalization"
+    "## Split and normalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "thermal-silver",
+   "execution_count": 5,
+   "id": "changing-ratio",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Droping 30 data points by null features\n",
-      "X: (268546, 15), Y: (268546, 24)\n"
+      "Train experiments ids (11): [12, 3, 4, 8, 9, 5, 1, 15, 13, 7, 14]\n",
+      "Test experiments ids (4): [2, 11, 10, 6]\n"
      ]
     }
    ],
    "source": [
-    "# Drop null values\n",
-    "idx = X.notna().all(axis=1)\n",
-    "print('Droping {} data points by null features'.format(len(idx[idx == False])))\n",
+    "experiments = list(range(1, N_EXPERIMENTS + 1))\n",
+    "random.shuffle(experiments)\n",
     "\n",
-    "X = X.loc[idx].values\n",
-    "Y = Y.loc[idx].values\n",
-    "print('X: {}, Y: {}'.format(X.shape, Y.shape))"
+    "train_experiments = experiments[int(N_EXPERIMENTS * TEST_SIZE):]\n",
+    "test_experiments = experiments[:int(N_EXPERIMENTS * TEST_SIZE)]\n",
+    "\n",
+    "print('Train experiments ids ({}): {}'.format(len(train_experiments), train_experiments))\n",
+    "print('Test experiments ids ({}): {}'.format(len(test_experiments), test_experiments))\n",
+    "\n",
+    "# Check that no test experiment is in train\n",
+    "assert(not any([i in test_experiments for i in train_experiments]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cross-mounting",
+   "execution_count": 6,
+   "id": "thousand-drink",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train -> X: (187982, 15), Y: (187982, 24)\n",
-      "Test -> X: (80564, 15), Y: (80564, 24)\n"
+      "Train -> X: (196835, 15), Y: (196835, 24)\n",
+      "Test -> X: (71711, 15), Y: (71711, 24)\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=TEST_SIZE, random_state=0)\n",
+    "X_train = np.concatenate([features_dict[i] for i in train_experiments], axis=0)\n",
+    "Y_train = np.concatenate([targets_dict[i] for i in train_experiments], axis=0)\n",
+    "X_test = np.concatenate([features_dict[i] for i in test_experiments], axis=0)\n",
+    "Y_test = np.concatenate([targets_dict[i] for i in test_experiments], axis=0)\n",
     "\n",
     "print('Train -> X: {}, Y: {}'.format(X_train.shape, Y_train.shape))\n",
     "print('Test -> X: {}, Y: {}'.format(X_test.shape, Y_test.shape))"
@@ -419,20 +454,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "million-wheat",
+   "execution_count": 7,
+   "id": "aquatic-cabinet",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train -> min: -4.7494235121468265, max: 9.309577254501134, mean: -9.857268086378168e-18, std: 1.0000000000000002\n",
+      "Test -> min: -4.681015530353451, max: 4.014120323189233, mean: -0.03396178956156562, std: 1.0124789966278167\n"
+     ]
+    }
+   ],
    "source": [
     "scaler = StandardScaler().fit(X_train)\n",
     "\n",
     "X_train_norm = scaler.transform(X_train)\n",
-    "X_test_norm =  scaler.transform(X_test)"
+    "X_test_norm =  scaler.transform(X_test)\n",
+    "\n",
+    "print('Train -> min: {}, max: {}, mean: {}, std: {}'.format(np.min(X_train_norm), np.max(X_train_norm), np.mean(X_train_norm), np.std(X_train_norm)))\n",
+    "print('Test -> min: {}, max: {}, mean: {}, std: {}'.format(np.min(X_test_norm), np.max(X_test_norm), np.mean(X_test_norm), np.std(X_test_norm)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "agricultural-worry",
+   "id": "wooden-copyright",
    "metadata": {},
    "source": [
     "## Save data"
@@ -440,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "vulnerable-taiwan",
+   "execution_count": 8,
+   "id": "congressional-myanmar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amino-joshua",
+   "id": "offensive-conflict",
    "metadata": {},
    "outputs": [],
    "source": []
