RF multi-output regressor comparison

--- a/notebooks/models/interaction_forces/feature_selection.ipynb
+++ b/notebooks/models/interaction_forces/feature_selection.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "stuck-blogger",
+   "id": "trying-circus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statutory-overview",
+   "id": "statutory-skill",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "velvet-nickname",
+   "id": "hawaiian-pound",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "included-reconstruction",
+   "id": "negative-check",
    "metadata": {},
    "source": [
     "## Load data"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "trained-teacher",
+   "id": "round-tribute",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "trying-guyana",
+   "id": "successful-mentor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "human-rating",
+   "id": "radical-ceiling",
    "metadata": {},
    "source": [
     "## Feature selection"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "altered-friendship",
+   "id": "rotary-compact",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ordered-princeton",
+   "id": "original-usage",
    "metadata": {},
    "outputs": [
     {
@@ -288,8 +288,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fatal-semester",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TOP_FEATURES = 15\n",
+    "\n",
+    "# forest = ExtraTreesClassifier(n_estimators=250, max_depth=5, random_state=1)\n",
+    "# forest.fit(train[labels], train['target'])\n",
+    "\n",
+    "# importances = forest.feature_importances_\n",
+    "# std = np.std(\n",
+    "#     [tree.feature_importances_ for tree in forest.estimators_],\n",
+    "#     axis=0\n",
+    "# )\n",
+    "# indices = np.argsort(importances)[::-1]\n",
+    "# indices = indices[:TOP_FEATURES]\n",
+    "\n",
+    "# print('Top features:')\n",
+    "# for f in range(TOP_FEATURES):\n",
+    "#     print('%d. feature %d (%f)' % (f + 1, indices[f], importances[indices[f]]))\n",
+    "    \n",
+    "# plt.figure()\n",
+    "# plt.title('Top feature importances')\n",
+    "# plt.bar(\n",
+    "#     range(TOP_FEATURES), \n",
+    "#     importances[indices],\n",
+    "#     yerr=std[indices], \n",
+    "# )\n",
+    "# plt.xticks(range(TOP_FEATURES), indices)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
-   "id": "mature-occasion",
+   "id": "governing-partnership",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "incomplete-worse",
+   "id": "romantic-radar",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "female-original",
+   "id": "touched-chance",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "worthy-galaxy",
+   "id": "formal-duplicate",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "atlantic-radiation",
+   "id": "polished-circulation",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "durable-emphasis",
+   "id": "swedish-recorder",
    "metadata": {},
    "outputs": [],
    "source": []
