--- a/notebooks/models/interaction_forces/RF_hyperparameters_search.ipynb
+++ b/notebooks/models/interaction_forces/RF_hyperparameters_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "gisSEwlud_Yn"
    },
@@ -27,9 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.utils.io.Tee at 0x7fd1f8d1f7c0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.utils.io import Tee\n",
     "\n",
@@ -52,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,9 +100,9 @@
     "param_grid = {\n",
     "    'n_estimators': [100, 500, 1000, 5000, 10000],\n",
     "    'max_depth': [5, 7, 10, 13, 15],\n",
-    "    'max_features': [0.3, 0.4, 0.5],\n",
-    "    'min_samples_leaf': [0.01, 0.001, 0.0001],\n",
-    "    'min_samples_split': [0.2, 0.1, 0.01, 0.001]\n",
+    "    'max_features': [0.01, 0.05, 0.1, 0.2],\n",
+    "    'min_samples_leaf': [0.1, 0.01, 0.001],\n",
+    "    'min_samples_split': [0.01, 0.001, 0.0001]\n",
     "}\n",
     "\n",
     "\n",
