Remove ipunb checkpoints

--- a/notebooks/models/interaction_forces/RF_hyperparameters_search.ipynb
+++ b/notebooks/models/interaction_forces/RF_hyperparameters_search.ipynb
@@ -113,6 +113,7 @@
     "print('Number of parameters combinations: {}'.format(param_grid_len))\n",
     "\n",
     "for idx, params in enumerate(param_grid_ls):\n",
+    "    print(strftime('%Y-%m-%d %H:%M:%S'))\n",
     "    params_id = ''.join(random.choices(string.ascii_uppercase + string.digits, k=10))\n",
     "    print('Parameters ({}) {}/{}'.format(params_id, idx + 1, param_grid_len))\n",
     "    print(params)\n",
